--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                 <button class="header__call-2 request-call"><span class="information__icon fa fa-phone"></span></button>
             </div>
         </div>
+        <nav class="header__mob-menu">
+            <li class="header__item"><a href="#I-do">Услуги</a></li>
+            <li class="header__item"><a href="#about-me" class="active">Портфолио</a></li>
+            <li class="header__item"><a href="#price">Стоимость</a></li>
+        </nav>
     </header>
     <main>
         <section class="about-me" id="about-me">
