--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="slick.min.js"></script>
     <script src="script.js"></script>
+    <script src="jquery.inputmask.min.js"></script>
     <link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
@@ -20,9 +21,8 @@
 </head>
 
 <body>
-    <!-- <div class="bg"></div> -->
     <div class="popup">
-        <form action="" class="popup__call">
+        <form class="popup__call">
             <h2 class="popup__title">Заказать звонок</h2>
             <div class="popup__back">
                 <span></span>
@@ -31,7 +31,7 @@
             <label for="name">Введите имя</label>
             <input class="popup__input" type="text" placeholder="Ваше имя" id="name" required>
             <label for="phone">Введите номер телефона</label>
-            <input class="popup__input" type="tel" placeholder="Номер телефона" id="phone" required>
+            <input class="popup__input" type="tel" placeholder="8(___) ___-____" id="phone" required>
             <label for="mail">Введите почту</label>
             <input class="popup__input" type="email" placeholder="Почта" id="mail" required>
             <p class="popup__text">В ближайшее время вам&nbsp;позвонят.<br>Дождитесь!</p>
@@ -45,22 +45,22 @@
                 <span></span>
                 <span></span>
             </div>
-            <nav class="header__menu">
+            <ul class="header__menu">
                 <li class="header__item"><a href="#I-do">Услуги</a></li>
                 <li class="header__item"><a href="#about-me" class="active">Портфолио</a></li>
                 <li class="header__item"><a href="#price">Стоимость</a></li>
-            </nav>
+            </ul>
             <div class="header__request">
-                <a href="tel:+7 (499) 995-55-77" class="header__number number">+7 (499) 995-55-77</a>
+                <a href="tel:+7(499)995-55-77" class="header__number number">+7 (499) 995-55-77</a>
                 <button class="header__call request-call">Заказать звонок</button>
                 <button class="header__call-2 request-call"><span class="information__icon fa fa-phone"></span></button>
             </div>
         </div>
-        <nav class="header__mob-menu">
+        <ul class="header__mob-menu">
             <li class="header__item"><a href="#I-do">Услуги</a></li>
             <li class="header__item"><a href="#about-me" class="active">Портфолио</a></li>
             <li class="header__item"><a href="#price">Стоимость</a></li>
-        </nav>
+        </ul>
     </header>
     <main>
         <section class="about-me" id="about-me">
@@ -146,7 +146,7 @@
                 <li class="information__item"><a href="">Стоимость</a></li>
             </ul>
             <ul class="information__request">
-                <li class="information__item-2"><a href="tel:+7 (499) 995-77-55"><span
+                <li class="information__item-2"><a href="tel:+7(499)995-77-55"><span
                             class="information__icon fa fa-phone"></span>+7 (499) 995-77-55</a></li>
                 <li class="information__item-2"><a href="mailto:dmitry@alekseev.com"><span
                             class="information__icon fa fa-envelope" aria-hidden="true"></span>dmitry@alekseev.com</a>
